fix(ui): enhacne seo - background and foreground contrast ratio - fix canonical - select element sr

--- a/mavenjs/css/style.css
+++ b/mavenjs/css/style.css
@@ -49,7 +49,7 @@ header .version select {
     border: 2px solid #e85e1d;
     border-radius: 25px;
     background-color: #fff;
-    color: #e85e1d;
+    color: #c84600;
     cursor: pointer;
     outline: none;
     transition: all 0.3s ease;
